# src/main/kotlin/koriit/kotlin/myapp/api/http/responses/EntitiesList.kt
@@ -1,7 +1,0 @@
-package koriit.kotlin.myapp.api.http.responses
-
-import koriit.kotlin.myapp.domain.Entity
-
-data class EntitiesList(
-    val entities: List<Entity>
-)
