# src/main/kotlin/koriit/kotlin/myapp/api/http/responses/UsersList.kt
@@ -1,0 +1,5 @@
+package koriit.kotlin.myapp.api.http.responses
+
+data class UsersList(
+    val users: List<UserDetails>
+)
